# Chess-Bot

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  README  build.rs  main  makefile
assets/: CMakeLists.txt
assets/shaders/: shader.wgsl
include/glad/: glad.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: Board.cpp  Board.h  Board.hpp  Game.cpp  Game.h  Game.hpp  Masks.hpp  Move.cpp  Opponent.cpp  Opponent.hpp  Piece.cpp  Piece.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Test.cpp  Test.h  Texture.cpp  Texture.h  board.rs  camera.rs  glad.c  lib.rs  main.cpp  main.rs  state.rs  texture.rs  vertex.rs
src/board/: Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Masks.hpp  Move.cpp  Opponent.cpp  Opponent.hpp  Test.cpp  Test.hpp  main.cpp
src/ffi/: ffi.cpp  ffi.hpp  ffi.rs  mod.rs
src/graphics/: Piece.cpp  Piece.hpp  Resources.cpp  Resources.hpp  Shader.cpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  fragment.frag  vertex.vert
test/: output.epd  perftsuite.epd
